@@ -9,7 +9,25 @@
 			file as well as run the '1.3.0 update' under 'admin tools' --&gt; 'updates'
 			to make several changes to Segue's database and file-storage structure.
 		 (<i>Adam Franco</i>)
-		
+		<li/> Bug Fix:
+	 
+			When editing slots, information about whether the slot was in use not or not
+			is now accurate.
+		 (<i>Alex Chapin</i>)
+		<li/> Change:  
+			Added new template to config.inc.php.
+		 (<i>Alex Chapin</i>)		
+		<li/> Change:  
+			Changed display of links on home page.  In particular, change &quot;Public Site
+			Lising&quot; to &quot;Public Sites&quot;.  Removed &quot;links&quot; header and removed header
+			formatting from help link.  Also added text to public site listing.
+		 (<i>Alex Chapin</i>)		
+		<li/> New feature:  
+			Added a config option to include forgot your password link below login
+			fields when there has been no authentication.  This allows users to request
+			Segue to reset the passwords for their Segue user accounts (i.e. those 
+			accounts whose authentication type is &quot;db&quot;)
+		 (<i>Alex Chapin</i>)		
 		<li/> Bug Fix:
 	 
 			HTMLAREA and plaintext box editing now behavies better with respect to
