@@ -7,7 +7,18 @@
 			file as well as run the '1.3.0 update' under 'admin tools' --> 'updates'
 			to make several changes to Segue's database and file-storage structure.
 		</important>
-		
+		<fix author='alex'>
+			When editing slots, information about whether the slot was in use not or not
+			is now accurate.
+		</fix>
+		<change author='alex'>
+			Added new template to config.inc.php.
+		</change>		
+		<change author='alex'>
+			Changed display of links on home page.  In particular, change "Public Site
+			Lising" to "Public Sites".  Removed "links" header and removed header
+			formatting from help link.  Also added text to public site listing.
+		</change>		
 		<new author='alex'>
 			Added a config option to include forgot your password link below login
 			fields when there has been no authentication.  This allows users to request
